swipe activated on item detail
Templated Calendar Item Detail
OnSwipe: navigate through item detail

--- a/MyCalendar/WPCalendar/WPCalendar.csproj
+++ b/MyCalendar/WPCalendar/WPCalendar.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Helpers\ExtensionMethods.cs" />
     <Compile Include="Helpers\HelperMethods.cs" />
     <Compile Include="Converters\IDateToBrushConverter.cs" />
+    <Compile Include="DailyDetailItem.cs" />
     <Compile Include="ISupportCalendarItem.cs" />
     <Compile Include="Models\EventType.cs" />
     <Compile Include="PopupEditDeleteChild.cs" />
